--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "aedart/athenaeum-container": "^6.4",
         "aedart/athenaeum-database": "^6.4",
         "aedart/athenaeum-streams": "^6.4",
-        "league/flysystem": "^3.0.18",
-        "illuminate/console": "^v9.7.0"
+        "illuminate/console": "^v9.30.1",
+        "league/flysystem": "^3.5.0"
     },
     "require-dev": {
-        "league/flysystem-adapter-test-utilities": "^3.0.18"
+        "league/flysystem-adapter-test-utilities": "^3.3.0"
     },
     "autoload": {
         "psr-4": {
