--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "aedart/athenaeum-flysystem-db",
     "description": "Flysystem Database Adapter",
-    "keywords": ["Athenaeum", "Flysystem", "Database", "Adapter", "Laravel"],
+    "keywords": [
+        "Athenaeum",
+        "Flysystem",
+        "Database",
+        "Adapter",
+        "Laravel"
+    ],
     "homepage": "https://aedart.github.io/athenaeum/",
     "license": "BSD-3-Clause",
     "type": "library",
@@ -13,9 +19,9 @@
     ],
     "require": {
         "php": "^8.0.2",
-        "aedart/athenaeum-container": "^6.9",
-        "aedart/athenaeum-database": "^6.9",
-        "aedart/athenaeum-streams": "^6.9",
+        "aedart/athenaeum-container": "^6.8.1",
+        "aedart/athenaeum-database": "^6.8.1",
+        "aedart/athenaeum-streams": "^6.8.1",
         "illuminate/console": "^v9.30.1",
         "league/flysystem": "^3.11.0"
     },
